--- a/MagicYouPlayer/FavoritePlaylistCollectioncCell/FavoritePlaylistCollectionViewCell.xib
+++ b/MagicYouPlayer/FavoritePlaylistCollectioncCell/FavoritePlaylistCollectionViewCell.xib
@@ -10,57 +10,58 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="FavoritePlaylistCollectionViewCell" customModule="MagicYouPlayer" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="175" height="227"/>
+            <rect key="frame" x="0.0" y="0.0" width="150" height="214"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="175" height="227"/>
+                <rect key="frame" x="0.0" y="0.0" width="150" height="214"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ljz-FU-x7n">
-                        <rect key="frame" x="0.0" y="0.0" width="175" height="227"/>
+                        <rect key="frame" x="0.0" y="0.0" width="150" height="214"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pjY-cC-NYK">
-                                <rect key="frame" x="0.0" y="0.0" width="175" height="150"/>
+                                <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mRP-Z8-ugY">
-                                        <rect key="frame" x="0.0" y="0.0" width="175" height="150"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mRP-Z8-ugY">
+                                        <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                     </imageView>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="mRP-Z8-ugY" firstAttribute="top" secondItem="pjY-cC-NYK" secondAttribute="top" id="2IE-Wq-Wgo"/>
+                                    <constraint firstAttribute="width" constant="150" id="9ag-U1-lqg"/>
                                     <constraint firstAttribute="bottom" secondItem="mRP-Z8-ugY" secondAttribute="bottom" id="QOP-2i-Rno"/>
+                                    <constraint firstAttribute="height" constant="150" id="X2C-zw-v6p"/>
                                     <constraint firstItem="mRP-Z8-ugY" firstAttribute="leading" secondItem="pjY-cC-NYK" secondAttribute="leading" id="alw-mF-Fn1"/>
-                                    <constraint firstAttribute="height" constant="150" id="iVc-TF-inX"/>
                                     <constraint firstAttribute="trailing" secondItem="mRP-Z8-ugY" secondAttribute="trailing" id="wC3-fd-ojr"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1FT-EA-F7f">
-                                <rect key="frame" x="10" y="165" width="155" height="21"/>
+                                <rect key="frame" x="10" y="155" width="130" height="21"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="L3m-R4-dxj"/>
+                                    <constraint firstAttribute="height" constant="21" id="PQY-Ho-xKg"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sYi-Ff-hja">
-                                <rect key="frame" x="10" y="196" width="155" height="21"/>
+                                <rect key="frame" x="10" y="186" width="130" height="21"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="qkh-LX-fCo"/>
+                                    <constraint firstAttribute="height" constant="21" id="t9K-wj-F54"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="sYi-Ff-hja" secondAttribute="bottom" constant="10" id="ErV-UW-dQ5"/>
+                            <constraint firstAttribute="bottom" secondItem="sYi-Ff-hja" secondAttribute="bottom" constant="7" id="FDA-Vb-J6W"/>
                             <constraint firstItem="sYi-Ff-hja" firstAttribute="top" secondItem="1FT-EA-F7f" secondAttribute="bottom" constant="10" id="QY5-M6-NEB"/>
                             <constraint firstItem="sYi-Ff-hja" firstAttribute="leading" secondItem="1FT-EA-F7f" secondAttribute="leading" id="Sp7-xC-jOe"/>
                             <constraint firstItem="1FT-EA-F7f" firstAttribute="leading" secondItem="ljz-FU-x7n" secondAttribute="leading" constant="10" id="TKa-re-kWs"/>
-                            <constraint firstItem="1FT-EA-F7f" firstAttribute="top" secondItem="pjY-cC-NYK" secondAttribute="bottom" constant="15" id="ZOC-gZ-6Cg"/>
+                            <constraint firstItem="1FT-EA-F7f" firstAttribute="top" secondItem="pjY-cC-NYK" secondAttribute="bottom" constant="5" id="ZOC-gZ-6Cg"/>
                             <constraint firstItem="sYi-Ff-hja" firstAttribute="trailing" secondItem="1FT-EA-F7f" secondAttribute="trailing" id="ZYx-e3-ewL"/>
                             <constraint firstItem="pjY-cC-NYK" firstAttribute="top" secondItem="ljz-FU-x7n" secondAttribute="top" id="axk-Qu-hhn"/>
                             <constraint firstItem="pjY-cC-NYK" firstAttribute="leading" secondItem="ljz-FU-x7n" secondAttribute="leading" id="dga-BG-Q3x"/>
@@ -77,13 +78,14 @@
                 <constraint firstAttribute="bottom" secondItem="ljz-FU-x7n" secondAttribute="bottom" id="vfj-zv-Fz7"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="175" height="227"/>
+            <size key="customSize" width="150" height="214"/>
             <connections>
                 <outlet property="favoritePreviewImageView" destination="mRP-Z8-ugY" id="VFz-tP-FNB"/>
                 <outlet property="favoriteTitileTextLabel" destination="1FT-EA-F7f" id="34F-fv-JFY"/>
                 <outlet property="favoriteViewCountTextLabel" destination="sYi-Ff-hja" id="H1a-3J-FF8"/>
+                <outlet property="previewVideoView" destination="pjY-cC-NYK" id="JS2-kw-d7G"/>
             </connections>
-            <point key="canvasLocation" x="-65.94202898550725" y="-2.34375"/>
+            <point key="canvasLocation" x="-84.057971014492765" y="-6.6964285714285712"/>
         </collectionViewCell>
     </objects>
 </document>
