--- a/MagicYouPlayer/PlaylistCollectionCell/PlaylistCollectionViewCell.xib
+++ b/MagicYouPlayer/PlaylistCollectionCell/PlaylistCollectionViewCell.xib
@@ -10,62 +10,63 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PlaylistCollectionViewCell" id="gTV-IL-0wX" customClass="PlaylistCollectionViewCell" customModule="MagicYouPlayer" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="332" height="240"/>
+            <rect key="frame" x="0.0" y="0.0" width="237" height="193"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="332" height="240"/>
+                <rect key="frame" x="0.0" y="0.0" width="237" height="193"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b78-6X-41N">
-                        <rect key="frame" x="0.0" y="0.0" width="332" height="240"/>
+                        <rect key="frame" x="0.0" y="0.0" width="237" height="193"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cfe-bg-fWY">
-                                <rect key="frame" x="0.0" y="0.0" width="332" height="150"/>
+                                <rect key="frame" x="0.0" y="0.0" width="237" height="110"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7YH-5t-xnd">
-                                        <rect key="frame" x="0.0" y="0.0" width="332" height="150"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7YH-5t-xnd">
+                                        <rect key="frame" x="0.0" y="0.0" width="237" height="110"/>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
+                                    <constraint firstAttribute="width" constant="237" id="8HR-vk-hlL"/>
                                     <constraint firstItem="7YH-5t-xnd" firstAttribute="top" secondItem="Cfe-bg-fWY" secondAttribute="top" id="Nqw-lO-Bwz"/>
                                     <constraint firstItem="7YH-5t-xnd" firstAttribute="leading" secondItem="Cfe-bg-fWY" secondAttribute="leading" id="Pn6-vt-6wi"/>
                                     <constraint firstAttribute="trailing" secondItem="7YH-5t-xnd" secondAttribute="trailing" id="ZGm-gu-QRl"/>
                                     <constraint firstAttribute="bottom" secondItem="7YH-5t-xnd" secondAttribute="bottom" id="dos-ZH-ftJ"/>
-                                    <constraint firstAttribute="height" constant="150" id="wPB-78-WCJ"/>
+                                    <constraint firstAttribute="height" constant="110" id="wPB-78-WCJ"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZLQ-ep-Qnl">
-                                <rect key="frame" x="0.0" y="150" width="332" height="90"/>
+                                <rect key="frame" x="0.0" y="110" width="237" height="83"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GdP-MB-R0t">
-                                        <rect key="frame" x="15" y="15" width="297" height="25"/>
+                                        <rect key="frame" x="0.0" y="15" width="237" height="25"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="25" id="ITV-c7-xbL"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N1U-yC-IZU">
-                                        <rect key="frame" x="15" y="55" width="297" height="21"/>
+                                        <rect key="frame" x="0.0" y="55" width="237" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="kma-yl-dv9"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="N1U-yC-IZU" firstAttribute="leading" secondItem="GdP-MB-R0t" secondAttribute="leading" id="BMF-ad-hZz"/>
-                                    <constraint firstAttribute="bottom" secondItem="N1U-yC-IZU" secondAttribute="bottom" constant="14" id="Ctl-gX-zQV"/>
+                                    <constraint firstAttribute="bottom" secondItem="N1U-yC-IZU" secondAttribute="bottom" constant="7" id="GfA-cP-IJj"/>
                                     <constraint firstItem="GdP-MB-R0t" firstAttribute="top" secondItem="ZLQ-ep-Qnl" secondAttribute="top" constant="15" id="Gld-Fr-xbT"/>
                                     <constraint firstItem="N1U-yC-IZU" firstAttribute="trailing" secondItem="GdP-MB-R0t" secondAttribute="trailing" id="M0A-vy-2dv"/>
                                     <constraint firstItem="N1U-yC-IZU" firstAttribute="top" secondItem="GdP-MB-R0t" secondAttribute="bottom" constant="15" id="RTe-kl-P3a"/>
-                                    <constraint firstItem="GdP-MB-R0t" firstAttribute="leading" secondItem="ZLQ-ep-Qnl" secondAttribute="leading" constant="15" id="hd4-5M-NDs"/>
-                                    <constraint firstAttribute="trailing" secondItem="GdP-MB-R0t" secondAttribute="trailing" constant="20" id="vFa-mJ-r46"/>
+                                    <constraint firstItem="GdP-MB-R0t" firstAttribute="leading" secondItem="ZLQ-ep-Qnl" secondAttribute="leading" id="hd4-5M-NDs"/>
+                                    <constraint firstAttribute="trailing" secondItem="GdP-MB-R0t" secondAttribute="trailing" id="vFa-mJ-r46"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -89,13 +90,14 @@
                 <constraint firstItem="b78-6X-41N" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="tMy-W4-1zr"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="332" height="240"/>
+            <size key="customSize" width="237" height="193"/>
             <connections>
                 <outlet property="playlistPreviewImageView" destination="7YH-5t-xnd" id="ST3-lE-EQk"/>
                 <outlet property="previewCountTextLabel" destination="N1U-yC-IZU" id="0eG-F5-b3j"/>
+                <outlet property="previewVideoView" destination="Cfe-bg-fWY" id="whz-LM-vqC"/>
                 <outlet property="videoTitleTextLabel" destination="GdP-MB-R0t" id="y7N-ZO-phi"/>
             </connections>
-            <point key="canvasLocation" x="305.79710144927537" y="105.13392857142857"/>
+            <point key="canvasLocation" x="235.50724637681162" y="89.397321428571431"/>
         </collectionViewCell>
     </objects>
 </document>
