--- a/MagicYouPlayer/PlaylistCollectionCell/PlaylistCollectionViewCell.xib
+++ b/MagicYouPlayer/PlaylistCollectionCell/PlaylistCollectionViewCell.xib
@@ -20,38 +20,36 @@
                         <rect key="frame" x="0.0" y="0.0" width="237" height="193"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cfe-bg-fWY">
-                                <rect key="frame" x="0.0" y="0.0" width="237" height="110"/>
+                                <rect key="frame" x="0.0" y="0.0" width="237" height="116.5"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7YH-5t-xnd">
-                                        <rect key="frame" x="0.0" y="0.0" width="237" height="110"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="237" height="116.5"/>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="237" id="8HR-vk-hlL"/>
-                                    <constraint firstItem="7YH-5t-xnd" firstAttribute="top" secondItem="Cfe-bg-fWY" secondAttribute="top" id="Nqw-lO-Bwz"/>
-                                    <constraint firstItem="7YH-5t-xnd" firstAttribute="leading" secondItem="Cfe-bg-fWY" secondAttribute="leading" id="Pn6-vt-6wi"/>
-                                    <constraint firstAttribute="trailing" secondItem="7YH-5t-xnd" secondAttribute="trailing" id="ZGm-gu-QRl"/>
-                                    <constraint firstAttribute="bottom" secondItem="7YH-5t-xnd" secondAttribute="bottom" id="dos-ZH-ftJ"/>
-                                    <constraint firstAttribute="height" constant="110" id="wPB-78-WCJ"/>
+                                    <constraint firstItem="7YH-5t-xnd" firstAttribute="top" secondItem="Cfe-bg-fWY" secondAttribute="top" id="1ug-BP-UpY"/>
+                                    <constraint firstItem="7YH-5t-xnd" firstAttribute="leading" secondItem="Cfe-bg-fWY" secondAttribute="leading" id="Kyy-x3-FEy"/>
+                                    <constraint firstAttribute="trailing" secondItem="7YH-5t-xnd" secondAttribute="trailing" id="j7e-RI-OV4"/>
+                                    <constraint firstAttribute="bottom" secondItem="7YH-5t-xnd" secondAttribute="bottom" id="qGV-2L-Oic"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZLQ-ep-Qnl">
-                                <rect key="frame" x="0.0" y="110" width="237" height="83"/>
+                                <rect key="frame" x="0.0" y="116.5" width="237" height="76.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GdP-MB-R0t">
-                                        <rect key="frame" x="0.0" y="15" width="237" height="25"/>
+                                        <rect key="frame" x="0.0" y="15" width="237" height="20.5"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="25" id="ITV-c7-xbL"/>
+                                            <constraint firstAttribute="height" constant="20.5" id="lFb-02-1KW"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N1U-yC-IZU">
-                                        <rect key="frame" x="0.0" y="55" width="237" height="21"/>
+                                        <rect key="frame" x="0.0" y="55" width="237" height="14.5"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="21" id="kma-yl-dv9"/>
+                                            <constraint firstAttribute="height" constant="14.5" id="H0F-i3-aKd"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -60,34 +58,37 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="N1U-yC-IZU" firstAttribute="leading" secondItem="GdP-MB-R0t" secondAttribute="leading" id="BMF-ad-hZz"/>
-                                    <constraint firstAttribute="bottom" secondItem="N1U-yC-IZU" secondAttribute="bottom" constant="7" id="GfA-cP-IJj"/>
-                                    <constraint firstItem="GdP-MB-R0t" firstAttribute="top" secondItem="ZLQ-ep-Qnl" secondAttribute="top" constant="15" id="Gld-Fr-xbT"/>
-                                    <constraint firstItem="N1U-yC-IZU" firstAttribute="trailing" secondItem="GdP-MB-R0t" secondAttribute="trailing" id="M0A-vy-2dv"/>
-                                    <constraint firstItem="N1U-yC-IZU" firstAttribute="top" secondItem="GdP-MB-R0t" secondAttribute="bottom" constant="15" id="RTe-kl-P3a"/>
-                                    <constraint firstItem="GdP-MB-R0t" firstAttribute="leading" secondItem="ZLQ-ep-Qnl" secondAttribute="leading" id="hd4-5M-NDs"/>
-                                    <constraint firstAttribute="trailing" secondItem="GdP-MB-R0t" secondAttribute="trailing" id="vFa-mJ-r46"/>
+                                    <constraint firstItem="N1U-yC-IZU" firstAttribute="leading" secondItem="ZLQ-ep-Qnl" secondAttribute="leading" id="2vL-Bs-jnl"/>
+                                    <constraint firstAttribute="trailing" secondItem="GdP-MB-R0t" secondAttribute="trailing" id="F45-cM-K5i"/>
+                                    <constraint firstItem="GdP-MB-R0t" firstAttribute="top" secondItem="ZLQ-ep-Qnl" secondAttribute="top" constant="15" id="Mqu-ed-v57"/>
+                                    <constraint firstItem="GdP-MB-R0t" firstAttribute="leading" secondItem="ZLQ-ep-Qnl" secondAttribute="leading" id="Pvz-BD-eqD"/>
+                                    <constraint firstAttribute="bottom" secondItem="N1U-yC-IZU" secondAttribute="bottom" constant="7" id="Y2R-YW-W5e"/>
+                                    <constraint firstItem="N1U-yC-IZU" firstAttribute="top" secondItem="GdP-MB-R0t" secondAttribute="bottom" constant="19.5" id="tvd-7h-Gyj"/>
+                                    <constraint firstAttribute="trailing" secondItem="N1U-yC-IZU" secondAttribute="trailing" id="xMq-0A-DHB"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Cfe-bg-fWY" firstAttribute="top" secondItem="b78-6X-41N" secondAttribute="top" id="Ma2-R6-3an"/>
-                            <constraint firstAttribute="bottom" secondItem="ZLQ-ep-Qnl" secondAttribute="bottom" id="Xh9-vR-FEA"/>
-                            <constraint firstItem="Cfe-bg-fWY" firstAttribute="leading" secondItem="b78-6X-41N" secondAttribute="leading" id="bEg-G3-kVz"/>
-                            <constraint firstAttribute="trailing" secondItem="Cfe-bg-fWY" secondAttribute="trailing" id="rIX-Fr-xCQ"/>
-                            <constraint firstItem="ZLQ-ep-Qnl" firstAttribute="leading" secondItem="b78-6X-41N" secondAttribute="leading" id="x5x-9q-qAl"/>
-                            <constraint firstItem="ZLQ-ep-Qnl" firstAttribute="top" secondItem="Cfe-bg-fWY" secondAttribute="bottom" id="z0B-91-CNF"/>
-                            <constraint firstAttribute="trailing" secondItem="ZLQ-ep-Qnl" secondAttribute="trailing" id="zxR-ye-nGv"/>
+                            <constraint firstAttribute="trailing" secondItem="ZLQ-ep-Qnl" secondAttribute="trailing" id="96O-Xm-Byc"/>
+                            <constraint firstAttribute="trailing" secondItem="Cfe-bg-fWY" secondAttribute="trailing" id="Djv-PY-JIs"/>
+                            <constraint firstAttribute="trailing" secondItem="ZLQ-ep-Qnl" secondAttribute="trailing" id="KQw-RR-OMe"/>
+                            <constraint firstItem="Cfe-bg-fWY" firstAttribute="top" secondItem="b78-6X-41N" secondAttribute="top" id="LlY-je-HKL"/>
+                            <constraint firstItem="ZLQ-ep-Qnl" firstAttribute="top" secondItem="Cfe-bg-fWY" secondAttribute="bottom" id="ckJ-xk-gdg"/>
+                            <constraint firstItem="ZLQ-ep-Qnl" firstAttribute="leading" secondItem="b78-6X-41N" secondAttribute="leading" id="f67-rf-CBb"/>
+                            <constraint firstItem="ZLQ-ep-Qnl" firstAttribute="leading" secondItem="b78-6X-41N" secondAttribute="leading" id="r2p-ya-B3Q"/>
+                            <constraint firstAttribute="bottom" secondItem="ZLQ-ep-Qnl" secondAttribute="bottom" id="u8c-uo-EGB"/>
+                            <constraint firstItem="Cfe-bg-fWY" firstAttribute="leading" secondItem="b78-6X-41N" secondAttribute="leading" id="wAV-3r-oYO"/>
+                            <constraint firstItem="ZLQ-ep-Qnl" firstAttribute="top" secondItem="Cfe-bg-fWY" secondAttribute="bottom" id="y5t-6t-yDJ"/>
                         </constraints>
                     </view>
                 </subviews>
             </view>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="b78-6X-41N" secondAttribute="bottom" id="4HN-Jx-HaK"/>
-                <constraint firstItem="b78-6X-41N" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="6ve-Ed-DUp"/>
-                <constraint firstAttribute="trailing" secondItem="b78-6X-41N" secondAttribute="trailing" id="SgR-gN-OqY"/>
-                <constraint firstItem="b78-6X-41N" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="tMy-W4-1zr"/>
+                <constraint firstAttribute="bottom" secondItem="b78-6X-41N" secondAttribute="bottom" id="Btx-R2-2Ny"/>
+                <constraint firstAttribute="trailing" secondItem="b78-6X-41N" secondAttribute="trailing" id="LZG-Fv-VQa"/>
+                <constraint firstItem="b78-6X-41N" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="X2h-Cc-G4b"/>
+                <constraint firstItem="b78-6X-41N" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="bmI-ME-EkC"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="237" height="193"/>
